# sql2lineage

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: release.yaml
.github/workflos/: lint.yml  test.yml
.github/workflows/: lint.yml  publish.yml  test.yml
src/sql2lineage/: __init__.py  graph.py  model.py  parser.py  utils.py
src/sql2lineage/types/: model.py  parser.py  table.py  utils.py
tests/: test_graph.py  test_model.py  test_parser.py  test_schema.py  test_utils.py
tests/sql/: cte_with_subquery.sql  example.sql  from_subquery.sql  join_example.sql  join_no_subquery.sql  multi_expression_with_struct.sql  query_with_struct.sql  truncate_table.sql  unnest.sql
