[project]
name = "sql2lineage"
dynamic = [ "version" ]
description = "Create lineage graphs from SQL queries"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "networkx>=3.4.2,<4.0.0",
    "pydantic>=2.7.1,<3.0.0",
    "sqlglot>=26.13.0,<27.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
keywords = [
    "sql",
    "data lineage",
]
license = { text = "MIT" }
urls.Homepage = "https://github.com/sean-conkie/sql2lineage"
urls.Source = "https://github.com/sean-conkie/sql2lineage"
urls.Tracker = "https://github.com/sean-conkie/sql2lineage/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pyright>=1.1.399",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.5",
    "pytest-html>=4.1.1",
    "coverage>=7.8.0",
]

[[project.authors]]
name = "Sean Conkie"

[tool.isort]
profile = "black"

[tool.pydocstyle]
convention = "google"

[tool.ruff]
respect-gitignore = true
line-length = 120
indent-width = 4
show-fixes = true
unsafe-fixes = true
target-version = "py312"

[tool.pyright]
exclude = [ "venv" ]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
reportMissingImports = true
reportMissingTypeStubs = false


[tool.ruff.lint]
select = [ "D", "E", "F", "I", "N", "W",]
ignore = [ "D107", "D203", "D213", "D400", "D408", "D407", "D409", "D105",]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sql2lineage*"]

[tool.setuptools.dynamic.version]
attr = "sql2lineage.__version__"

